PRJS/ASP/Tuts/F/OpenGLJustin02/Fail/app/src/main/java/com/example/jmim/opengljustin02/MainSurfaceView.java
package com.example.jmim.opengljustin02;

import android.opengl.GLSurfaceView;
import android.app.Activity;

/**
 * Created by JMIM on 6/21/2015.
 */
public class MainSurfaceView extends GLSurfaceView
{

	public MainSurfaceView(Activity a)
	{
		super( a );
	}

}
